--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 cloudpickle
-hydra-core
-omegaconf==2.1.0
+hydra-core>=1.3
+omegaconf>=2.2,<2.4
 pybind11
-flake8==3.8.1 
-isort==4.3.21
-black==22.3.0
+flake8>=3.8
+isort>=5.0
+black>=22.3.0
 autoflake
 timm
 pytest
-scipy==1.7.3
+scipy>=1.11.0
 psutil
 opencv-python
 wandb
